src/objects/Graphics_Pack_Example__c.object
<CustomObject>
    <description>Example object to show how Graphics could be used</description>
    <fields>
        <fullName>First_3_awards__c</fullName>
        <formula>CASE( First_3_positions__c ,
&quot;Gold&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001Hxb3&quot;,&quot;Gold&quot;,16,16), 
&quot;Silver&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001Hxb6&quot;,&quot;Silver&quot;,16,16),
&quot;Bronze&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001Hxb0&quot;,&quot;Bronze&quot;,16,16),
 &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First 3 Awards</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_3_medals__c</fullName>
        <formula>CASE( First_3_positions__c ,
&quot;Gold&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001Hxdo&quot;,&quot;Gold&quot;,16,16),
&quot;Silver&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001Hxdr&quot;,&quot;Silver&quot;,16,16),
&quot;Bronze&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001Hxdl&quot;,&quot;Bronze&quot;,16,16),
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First 3 Medals</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_3_positions__c</fullName>
        <label>First 3 Positions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bronze</fullName>
                    <default>true</default>
                    <label>Bronze</label>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Out_of_3_currency__c</fullName>
        <formula>IF ( VALUE(TEXT(Out_of_3_rating__c)) &gt; 0, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001HxYZ&quot;, &quot;£&quot;, 16, 16),&quot;&quot;)
 +
IF ( VALUE(TEXT(Out_of_3_rating__c)) &gt; 1, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001HxYY&quot;, &quot;€&quot;, 16, 16),&quot;&quot;)
+
IF ( VALUE(TEXT(Out_of_3_rating__c)) &gt; 2, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001HxYX&quot;, &quot;$&quot;, 16, 16),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Out of 3 Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_of_3_lightbulbs__c</fullName>
        <formula>IF ( VALUE(TEXT(Out_of_3_rating__c)) &gt; 0, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001HxdW&quot;, &quot;*&quot;, 16, 16), IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001HxdX&quot;, &quot;-&quot;, 16, 16))
 +
IF ( VALUE(TEXT(Out_of_3_rating__c)) &gt; 1, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001HxdW&quot;, &quot;*&quot;, 16, 16), IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001HxdX&quot;, &quot;-&quot;, 16, 16))
+
IF ( VALUE(TEXT(Out_of_3_rating__c)) &gt; 2, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001HxdW&quot;, &quot;*&quot;, 16, 16), IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001HxdX&quot;, &quot;-&quot;, 16, 16))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Out of 3 Lightbulbs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_of_3_rating__c</fullName>
        <description>How many out of 3? 3 being best 0 being worst.</description>
        <label>Out of 3 Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Out_of_5_Ticks__c</fullName>
        <formula>IF ( VALUE(TEXT(Out_of_5_rating__c)) &gt; 0, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001Hxfj&quot;, &quot;*&quot;, 16, 16), IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001Hxc3&quot;, &quot;-&quot;, 16, 16))
+
IF ( VALUE(TEXT(Out_of_5_rating__c)) &gt; 1, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001Hxfj&quot;, &quot;*&quot;, 16, 16), IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001Hxc3&quot;, &quot;-&quot;, 16, 16))
+
IF ( VALUE(TEXT(Out_of_5_rating__c)) &gt; 2, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001Hxfj&quot;, &quot;*&quot;, 16, 16), IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001Hxc3&quot;, &quot;-&quot;, 16, 16))
+
IF ( VALUE(TEXT(Out_of_5_rating__c)) &gt; 3, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001Hxfj&quot;, &quot;*&quot;, 16, 16), IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001Hxc3&quot;, &quot;-&quot;, 16, 16))
+
IF ( VALUE(TEXT(Out_of_5_rating__c)) &gt; 4, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001Hxfj&quot;, &quot;*&quot;, 16, 16), IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001Hxc3&quot;, &quot;-&quot;, 16, 16))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Out of 5 Ticks</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_of_5_deck_chair__c</fullName>
        <formula>IF ( VALUE(TEXT(Out_of_5_rating__c)) &gt; 0, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001Hxit&quot;, &quot;*&quot;, 16, 16),&quot;&quot;)
+
IF ( VALUE(TEXT(Out_of_5_rating__c)) &gt; 1, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001Hxit&quot;, &quot;*&quot;, 16, 16),&quot;&quot;)
+
IF ( VALUE(TEXT(Out_of_5_rating__c)) &gt; 2, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001Hxit&quot;, &quot;*&quot;, 16, 16),&quot;&quot;)
+
IF ( VALUE(TEXT(Out_of_5_rating__c)) &gt; 3, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001Hxit&quot;, &quot;*&quot;, 16, 16),&quot;&quot;)
+
IF ( VALUE(TEXT(Out_of_5_rating__c)) &gt; 4, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001Hxit&quot;, &quot;*&quot;, 16, 16),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Out of 5 Deck Chairs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_of_5_rating__c</fullName>
        <label>Out of 5 Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Red_Amber_Green_Bullet__c</fullName>
        <formula>CASE(  Red_Amber_Green__c  ,
&quot;Red&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001HxWF&quot;,&quot;Red&quot;,16,16),
&quot;Amber&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001HxWB&quot;,&quot;Amber&quot;,16,16),
&quot;Green&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001HxW9&quot;,&quot;Green&quot;,16,16),
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Red Amber Green Bullet</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Red_Amber_Green_Person__c</fullName>
        <formula>CASE( Red_Amber_Green__c ,
&quot;Red&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001HxaQ&quot;,&quot;Red&quot;,16,16),
&quot;Amber&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001HxaP&quot;,&quot;Amber&quot;,16,16),
&quot;Green&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001HxaO&quot;,&quot;Green&quot;,16,16),
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Red Amber Green Person</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Red_Amber_Green__c</fullName>
        <label>Red Amber Green</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                    <default>true</default>
                    <label>Red</label>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Up_or_Down_Arrows__c</fullName>
        <formula>CASE(  Up_or_Down__c,
&quot;Up&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001HxhW&quot;,&quot;Up&quot;,16,16),
&quot;Down&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001HxhU&quot;,&quot;Down&quot;,16,16),
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Up or Down Arrows</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Up_or_Down_Thumbs__c</fullName>
        <formula>CASE( Up_or_Down__c ,
&quot;Up&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001Hxfi&quot;,&quot;Up&quot;,16,16),
&quot;Down&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001Hxfh&quot;,&quot;Down&quot;,16,16),
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Up or Down Thumbs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Up_or_Down__c</fullName>
        <label>Up or Down</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Up</fullName>
                    <default>true</default>
                    <label>Up</label>
                </value>
                <value>
                    <fullName>Down</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Graphics Pack Example</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Graphics Pack Examples</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>